# kWeb

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: k_socket.h  k_unit_test.h  k_web.h  socklib.h
src/: kWeb.cc  tcpcli.cc
tmp/: TinyHTTP.c  a.out  sample.py  test.cpp
tmp/htdocs/: index.html
